apps/dex/base/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: dex-policy
  namespace: dex
spec:
  selector:
    matchLabels:
      app: dex
  action: DENY
  rules:
    - to:
        - operation:
            methods: ["GET", "POST", "OPTIONS", "DELETE", "PATCH"]
      when:
        - key: request.headers[x-envoy-external-address]
          notValues:
            - "94.62.74.120" # Diego
            - "187.56.61.31" #Grizko
            - "74.220.16.29" #Test IP
